# paper-pilot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/paper_pilot/: __init__.py  cli.py
src/paper_pilot/checker/: format_checker.py
src/paper_pilot/commands/: check.py  count.py  init.py  outline.py  refs.py
src/paper_pilot/refs/: manager.py
src/paper_pilot/templates/thesis/: main.tex  references.bib
src/paper_pilot/templates/thesis/chapters/: conclusion.tex  introduction.tex  literature_review.tex  methodology.tex  results.tex
src/paper_pilot/utils/: counter.py
tests/: test_checker.py
