[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-pilot"
version = "0.1.0"
description = "中国研究生论文写作助手 - Chinese Graduate Thesis Writing Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Paper Pilot Team", email = "paper-pilot@example.com"}
]
keywords = ["thesis", "latex", "chinese", "academic", "writing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pp = "paper_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/paper-pilot/paper-pilot"
Documentation = "https://github.com/paper-pilot/paper-pilot#readme"
Repository = "https://github.com/paper-pilot/paper-pilot.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_pilot = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"